# linter-for-ctl

./: .gitignore  .pre-commit-config.yaml  Readme.md  get_panel_scripts.py  lint_errors.txt  linter.py  linter.spec  main.py  nodes.py  output  parser_.py  pyproject.toml  results.txt  test.tokens  test_parsing.py  token_.py  tokenizer.py
entities/: nodes.py  token_.py
services/: formatter_.py  parser_.py  tokenizer.py
