[tool.poetry]
name = "ctllint"
version = "0.1.0"
description = "Linter for .ctl (Control) language"
authors = ["Mateusz Polis <polismateusz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
